# cdata_structures

./: CMakeLists.txt  cdata_structures.h  list.c  memdebug  node.c  run
tests/: CMakeLists.txt  main.c
tests/lib/include/: cdata_structures.h
